@@ -2,8 +2,8 @@ Build.PL
 Changes
 MANIFEST
 lib/Web/Components.pm
-lib/Web/Components/Role/Component.pm
-lib/Web/Components/Role/Loading.pm
+lib/Web/Components/Loader.pm
+lib/Web/Components/Role.pm
 lib/Web/Components/Util.pm
 t/02pod.t
 t/03podcoverage.t
