@@ -3,7 +3,7 @@ use t::boilerplate;
 use Test::More;
 
 use_ok 'Web::Components';
-require_ok 'Web::Components::Role::Component';
+require_ok 'Web::Components::Role';
 
 {  package Component::Server;
 
@@ -14,7 +14,7 @@ require_ok 'Web::Components::Role::Component';
       Class::Usul->new( config => { appclass => __PACKAGE__  } ) },
       handles => [ 'config', 'debug', 'l10n', 'log' ];
 
-   with q(Web::Components::Role::Loading);
+   with q(Web::Components::Loader);
 }
 
 my $server = Component::Server->new;
